[package]
name = "punch"
version = "2.5.3"
edition = "2021"

[[bin]]
name = "punch"
path = "src/main.rs"

[lib]
name = "punch"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.23"
prettytable-rs = "0.10.0"
regex = "1.11.1"
serde = {version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.19"

[dev-dependencies]
test-case = "3.3.1"
